--- a/Resume.html
+++ b/Resume.html
@@ -16,7 +16,7 @@
         </ul>
     </div>
     <div id="resume">
-    <embed src="../Diego_Gonzalez_Resume.pdf" width="800px" height="2100px">
+    <embed src="Diego_Gonzalez_Resume.pdf" width="800px" height="2100px">
     </div>
 </body>
 
